feat: added new swagger endpoints for creating, updating and deleting Issues
