# src/backend/Swagger/openapi_server/models/add_issue_request.py
@@ -1,0 +1,6 @@
+from openapi_server.models.base_model import Model
+
+class AddIssueRequest:
+    def __init__(self, column_id: int, description: str):
+        self.column_id = column_id
+        self.description = description
